# picoplace

./: .gitignore  Cargo.toml  DESIGN.md  HARDWARE_INTEGRATION_PLAN.md  README.md  dist-workspace.toml  install.sh
.cursor/rules/: spec.md
crates/picoplace-ai-engine/: Cargo.toml
crates/picoplace-ai-engine/src/: lib.rs
crates/picoplace-buildifier/: Cargo.toml  README.md  build.rs
crates/picoplace-buildifier/src/: lib.rs
crates/picoplace-cli/: Cargo.toml
crates/picoplace-cli/src/: build.rs  clean.rs  export.rs  fmt.rs  layout.rs  lsp.rs  main.rs  open.rs  visualize.rs
crates/picoplace-cli/wix/: main.wxs
crates/picoplace-command-runner/: Cargo.toml
crates/picoplace-command-runner/src/: lib.rs
crates/picoplace-core/: Cargo.toml
crates/picoplace-core/src/: bundle.rs  convert.rs  file_provider.rs  lib.rs  load_spec.rs
crates/picoplace-core/src/lang/: assert.rs  component.rs  context.rs  error.rs  eval.rs  evaluator_ext.rs  file.rs  input.rs  interface.rs  mod.rs  module.rs  net.rs  symbol.rs  type_info.rs
crates/picoplace-core/tests/: assert.rs  component.rs  core_load_resolver.rs  file.rs  input.rs  interface.rs  load.rs  net.rs  symbol.rs  test.rs
crates/picoplace-core/tests/common/: mod.rs
crates/picoplace-core/tests/resources/: C146731.kicad_sym
crates/picoplace-core/tests/snapshots/: assert__check_false_should_error.snap  assert__check_true_should_pass.snap  assert__error_function_should_error.snap  component__component_duplicate_pin_names.snap  component__component_properties.snap  component__component_with_symbol.snap  component__interface_net_incompatible.snap  file__file_consistent_with_load.snap  file__file_fails_for_nonexistent.snap  file__file_resolves_from_subdirectory.snap  file__file_resolves_relative_path.snap  input__cfg_enum_value.snap  input__config_convert_chain.snap  input__config_convert_preserves_correct_types.snap  input__config_convert_with_default.snap  input__config_convert_with_enum.snap  input__config_int_to_float_conversion.snap  input__config_mixed_numeric_types.snap  input__config_str.snap  input__config_types.snap  input__config_with_convert_function.snap  input__config_without_convert_fails_type_check.snap  input__implicit_enum_conversion.snap  input__interface_mixed_templates_and_types.snap  input__interface_multiple_net_templates.snap  input__interface_nested_template.snap  input__interface_net_incompatible.snap  input__interface_net_template_basic.snap  input__io_config.snap  input__io_config_with_help_text.snap  input__io_interface_incompatible.snap  input__missing_required_io_config.snap  input__optional_io_config.snap  interface__interface_invoke_with_net_override.snap  interface__interface_multiple_instances_independent_symbols.snap  interface__interface_nested_symbol_copy.snap  interface__interface_net_symbol_copy.snap  load__cyclic_load_error.snap  load__directory_with_errors.snap  load__file_with_syntax_error.snap  (+32 more)
crates/picoplace-eda/: Cargo.toml  README.md
crates/picoplace-eda/src/: lib.rs
crates/picoplace-eda/src/kicad/: mod.rs  symbol.rs  symbol_library.rs
crates/picoplace-eda/tests/: test_eda.rs  test_utils.rs
crates/picoplace-engine/: Cargo.toml
crates/picoplace-engine/src/: lib.rs  placer_sa.rs  router.rs
crates/picoplace-kicad/: Cargo.toml
crates/picoplace-kicad-exporter/: Cargo.toml
crates/picoplace-kicad-exporter/src/: lib.rs
crates/picoplace-kicad-exporter/src/scripts/: update_layout_file.py
crates/picoplace-kicad-exporter/tests/: helpers.rs  layout_generation.rs
crates/picoplace-kicad-exporter/tests/resources/: .gitignore
crates/picoplace-kicad-exporter/tests/snapshots/: layout_generation__component_side_sync.layout.json.snap  layout_generation__module_layout.layout.json.snap  layout_generation__multi_pads.layout.json.snap  layout_generation__simple.layout.json.snap
crates/picoplace-kicad/src/: lib.rs
crates/picoplace-lang/: Cargo.toml
crates/picoplace-lang/src/: bundle.rs  diagnostics.rs  lib.rs  load.rs  suppression.rs
crates/picoplace-lang/src/lsp/: mod.rs  signature.rs
crates/picoplace-lang/tests/: assert.rs  component_properties.rs  enum_conversion.rs  input.rs  interface_templates.rs  interface_templates_snapshot.rs  load_diagnostics.rs  module_loader_attrs.rs  module_loading.rs  module_naming.rs  placeholder.rs  test.rs  test_bundle.rs
crates/picoplace-lang/tests/common/: mod.rs
crates/picoplace-lang/tests/snapshots/: assert__snapshot_check_false_should_error.snap  assert__snapshot_check_true_should_pass.snap  assert__snapshot_error_function_should_error.snap  component_properties__snapshot_component_properties.snap  enum_conversion__snapshot_enum_io_conversion.snap  input__component_factory_rejects_interface_even_with_single_net.snap  input__component_rejects_interface_even_with_single_net.snap  input__correct_usage_with_explicit_net_access.snap  input__interface_input.snap  input__module_io_rejects_interface_when_net_expected.snap  input__snapshot_io_and_config_with_values.snap  input__snapshot_missing_required_inputs_should_error.snap  input__snapshot_optional_inputs_return_none.snap  interface_templates_snapshot__interface_mixed_templates_and_types.snap  interface_templates_snapshot__interface_multiple_net_templates.snap  interface_templates_snapshot__interface_nested_template.snap  interface_templates_snapshot__interface_net_template_basic.snap  interface_templates_snapshot__interface_template_property_inheritance.snap  load_diagnostics__snapshot_cyclic_load_error.snap  (+29 more)
crates/picoplace-netlist/: Cargo.toml
crates/picoplace-netlist/src/: hierarchical_layout.rs  kicad_netlist.rs  kicad_schematic.rs  lib.rs
crates/picoplace-sexpr/: Cargo.toml
crates/picoplace-sexpr/src/: lib.rs
crates/picoplace-starlark-lsp/: Cargo.toml
crates/picoplace-starlark-lsp/src/: completion.rs  definition.rs  server.rs  test.rs
crates/picoplace-ui/: Cargo.toml  README.md
crates/picoplace-ui/examples/: demo.rs
crates/picoplace-ui/src/: lib.rs  progress.rs  spinner.rs  style.rs  terminal.rs
crates/picoplace-wasm/: Cargo.toml
crates/picoplace-wasm/src/: lib.rs
(+47 files in other folders)
