[package]
name = "picoplace-ai-engine"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "AI-powered placement and routing hints for PicoPlace using LLM APIs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
picoplace-netlist = { workspace = true }
picoplace-engine = { path = "../picoplace-engine" }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
