[package]
name = "picoplace-command-runner"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "A utility for running commands with output capture"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
strip-ansi-escapes = { workspace = true }
os_pipe = { workspace = true }
tempfile = { workspace = true }