[package]
name = "picoplace-core"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "Core functionality for Zen PCB design language"

[features]
default = ["native"]
native = ["reqwest", "dirs", "flate2", "tar", "walkdir"]
wasm = ["uuid/js", "getrandom/js", "dep:getrandom"]

[dependencies]
dupe = { workspace = true }
allocative = { workspace = true }
derive_more = { workspace = true }

starlark = { workspace = true }
starlark_map = { workspace = true }
starlark_derive = { workspace = true }
starlark_syntax = { workspace = true }

anyhow = { workspace = true }
argfile = { workspace = true }
clap = { workspace = true }
debugserver-types = { workspace = true }
either = { workspace = true }
globset = { workspace = true }
itertools = { workspace = true }
lsp-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true, optional = true }
uuid = { workspace = true }
getrandom = { workspace = true, optional = true }
pathdiff = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
ariadne = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
tar = { workspace = true, optional = true }
toml = { workspace = true }
chrono = { workspace = true }
zip = { workspace = true }

picoplace-eda = { workspace = true }
picoplace-netlist = { workspace = true }
picoplace-sexpr = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }