[package]
name = "picoplace-eda"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "EDA tool integration for PCB design"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
picoplace-sexpr = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }