[package]
name = "picoplace-lang"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "Zen language for PCB design"
documentation = "https://docs.rs/starlark"
categories = ["parser-implementations", "development-tools"]
keywords = ["starlark", "skylark", "language", "interpreter"]
license = "Apache-2.0"

[dependencies]
dupe = { workspace = true }
allocative = { workspace = true }
derive_more = { workspace = true }

starlark = { workspace = true }
picoplace-starlark-lsp = { workspace = true }
starlark_map = { workspace = true }
starlark_derive = { workspace = true }
starlark_syntax = { workspace = true }

anyhow = { workspace = true }
argfile = { workspace = true }
clap = { workspace = true }
debugserver-types = { workspace = true }
either = { workspace = true }
globset = { workspace = true }
itertools = { workspace = true }
lsp-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
uuid = { workspace = true }
pathdiff = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
ariadne = { workspace = true }
once_cell = { workspace = true }
display_container = { workspace = true }
lsp-server = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
toml = { workspace = true }
zip = { workspace = true }
tempfile = { workspace = true }
md5 = { workspace = true }

picoplace-kicad = { workspace = true }
picoplace-netlist = { workspace = true }
picoplace-eda = { workspace = true }
picoplace-core = { workspace = true }

[lib]
path = "src/lib.rs"

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
serde_yaml = { workspace = true }
zip = { workspace = true }
serial_test = { workspace = true }