[package]
name = "picoplace-starlark-lsp"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "LSP bindings for starlark"
documentation = "https://docs.rs/starlark"
categories = ["parser-implementations", "development-tools"]
keywords = ["starlark", "skylark", "language", "interpreter"]
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
derivative = { workspace = true }
dupe = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
lsp-server = { workspace = true }
lsp-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

starlark = { workspace = true }
starlark_syntax = { workspace = true }

[dev-dependencies]
maplit = { workspace = true }
regex = { workspace = true }
textwrap = { workspace = true }