[package]
name = "picoplace-ui"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "Consistent UI components for PCB tools"
license = "MIT OR Apache-2.0"

[dependencies]
indicatif = { workspace = true }
colored = { workspace = true }
once_cell = { workspace = true }
terminal_size = { workspace = true }
unicode-width = { workspace = true }
crossterm = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }