[package]
name = "picoplace-wasm"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "WebAssembly bindings for Zen PCB design language"

[lib]
crate-type = ["cdylib"]

[dependencies]
picoplace-core = { workspace = true, features = ["wasm"] }
picoplace-netlist = { workspace = true }
picoplace-eda = { workspace = true }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
anyhow = { workspace = true }
console_error_panic_hook = { workspace = true }
starlark = { workspace = true }
lazy_static = { workspace = true }
base64 = { workspace = true }
toml = { workspace = true }
zip = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }